Issue 2615 - Fix z-index (#2625)
* Fixes #2615

* Fixes tests

* Fixed z-index conflict

* Adds z-index to maxi-block general class

* Fix z-index conflict

--- a/src/components/arrow-displayer/style.scss
+++ b/src/components/arrow-displayer/style.scss
@@ -14,7 +14,7 @@ body.maxi-blocks--active .maxi-block.maxi-block--has-arrow {
 	width: 100%;
 	height: 100%;
 	backface-visibility: hidden;
-	z-index: 0;
+	z-index: -1;
 
 	&::before {
 		content: '';
