--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,7 +10,7 @@
 }
 .maxi-block {
 	position: relative;
-	z-index: 3;
+	z-index: 0;
 
 	&[data-align='full'] {
 		width: 100% !important;
